# sanic-adapters

./: LICENSE  README.md  pyproject.toml
sanic_adapters/: adapters.py  decorators.py  formatters.py  models.py  resources.py  routing.py
tests/: examples.py
tests/examples/: functions.py
tests/examples/qualnames/: resources.py
tests/examples/qualnames/nested_resources/: nested_rest_modules.py
tests/unit/: test_adapters.py  test_decorators.py  test_models.py  test_resources.py  test_routing.py
